Working register and change password, todo - password encryption and validation